--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
 }
 
+
 #main {
   position: relative;
   overflow: hidden;
@@ -77,6 +78,11 @@ body {
   margin-left: 20vw;
 }
 
+.img{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .page2 {
   position: relative;
   height: 100vh;
@@ -102,15 +108,18 @@ body {
   height: auto;
 }
 
+
 .overlay {
   position: absolute;
   bottom: 0;
+  margin-top: 10%;
   left: 0;
   right: 0;
+  top: 0;
   background-color: #008bba1f;
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: 87%;
   -webkit-transform: scale(0);
   -ms-transform: scale(0);
   transform: scale(0);
