--- a/styles/index.css
+++ b/styles/index.css
@@ -81,11 +81,21 @@ body {
 .img{
   display: flex;
   flex-wrap: wrap;
+  gap: 2%;
+}
+
+.text > p{
+    color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.text > h3{
+  color: purple;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .page2 {
   position: relative;
-  height: 100vh;
+  height: 165vh;
   width: 100vw;
   background-color: #fff;
   padding: 10% 10%;
@@ -97,8 +107,9 @@ body {
 
 .upcoming_events {
   position: relative;
-  width: 50%;
+  width: 49%;
 }
+
 
 .event_img {
   margin-top: 10%;
@@ -133,6 +144,20 @@ body {
   -ms-transform: scale(1);
   transform: scale(1);
 }
+
+/*responsive*/
+@media (max-width: 767px) {
+  .upcoming_events {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 574px) {
+  .upcoming_events {
+    width: 100%;
+  }
+}
+
 
 .text {
   color: #fff;
