--- a/styles/adminPage.css
+++ b/styles/adminPage.css
@@ -144,3 +144,19 @@ form input[type='submit'] {
 form input[type='submit']:hover {
   background: #2c52ed;
 }
+
+.login{
+  height: 60px;
+  width: 300px;
+  background-color: #2c52ed;
+  color: #fff;
+  font-weight: bolder;
+  border: none;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+
+.login > a{
+  text-decoration: none;
+  color: #fff;
+}
