--- a/styles/events.css
+++ b/styles/events.css
@@ -16,6 +16,12 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  flex-basis: content;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 #myUL li a {
@@ -30,10 +36,14 @@
   display: block;
 }
 
+#myUL li {
+  width: 30vw;
+  align-items: center;
+}
+
 #myUL li img {
   height: 70px;
   width: 70px;
-  margin-right: 60px;
   border-radius: 50%;
 }
 
