--- a/styles/everyEvent.css
+++ b/styles/everyEvent.css
@@ -4,6 +4,21 @@ body {
   margin: 0;
 }
 
+.header > h1{
+  color: green;
+}
+
+.left > h2{
+  color: red;
+}
+.left > h1{
+  color: rgb(202, 1, 202);
+}
+.left > p{
+  color: #302f01;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .container {
   text-align: center;
   margin: auto;
@@ -11,7 +26,7 @@ body {
   margin-top: 10px;
   width: 50%;
   padding: 10px;
-  background-color: #fff;
+  background-color:rgb(220, 220, 220);
   border-radius: 30px;
 }
 
@@ -26,6 +41,13 @@ body {
   justify-content: space-between;
 }
 
+.registration{
+  background-color: orangered;
+}
+.share{
+  background-color:rgb(107, 200, 231);
+}
+
 button {
   background-color: #fff;
   padding: 15px;
@@ -37,4 +59,14 @@ button > a {
   text-decoration: none;
   color: #000;
   cursor: pointer;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: larger;
 }
+button > a:hover{
+  color: grey;
+  cursor: pointer;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: larger;
+}
+
+
