--- a/styles/events.css
+++ b/styles/events.css
@@ -1,60 +1,92 @@
-* {
-  box-sizing: border-box;
+.button_filter_event {
+  display: inline-block !important;
+  width: 200px;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+.search_filter {
+  padding: 30px 0;
+}
+.search_filter input {
+  width: 40%;
+  margin: auto;
+  border-radius: 0;
 }
 
-h2{
- color: brown;
-}
-
-.header{
-  text-decoration: none;
-}
-
-#myInput {
-  background-position: 10px 12px;
+#eventBox {
+  background-image: url('../../images/home/event/search-icon.webp');
   background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 100% 0;
+}
+
+.content_event span {
+  display: inline-block;
+  margin: 10px;
+  font-size: medium;
+  font-style: italic;
+}
+
+.image_conatiner {
+  height: 250px;
   width: 100%;
-  font-size: 16px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
+  position: relative;
 }
-
-#myUL {
-  list-style-type: none;
+.image_conatiner img {
+  height: 100%;
+  width: 100%;
   padding: 0;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  flex-basis: content;
-  flex-wrap: wrap;
-  gap: 20px;
+  object-fit: cover !important;
+}
+#dateOfEvant {
+  background-color: rgb(83, 114, 240);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
+}
+.border-outline {
+  padding: 10px;
+  margin: 20px 3px;
+  border: 1px solid rgb(83, 114, 240);
 }
 
-#myUL li a {
-  border: 1px solid #ddd;
-  margin-top: -1px; /* Prevent double borders */
-  background-color: grey;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  color: white;
-  text-align: center;
+.filter-block {
   display: block;
+  margin: 10px 0;
 }
 
-#myUL li {
-  width: 30vw;
-  align-items: center;
+.tagFilter {
+  background-color: white;
+  color: black;
+  padding: 5px;
+  border-radius: 20px 20px 0 0;
 }
 
-#myUL li img {
-  height: 70px;
-  width: 70px;
-  border-radius: 50%;
+.bg_set_filter_btn {
+  border-radius: 20px;
+
+  border: 1px solid rgb(83, 114, 240);
 }
 
-#myUL li a:hover:not(.header) {
-  background-color: black;
+/* media query */
+
+@media screen and (max-width: 871px) {
+  #noneAtsmall {
+    display: none !important;
+  }
+  #increseatsmall {
+    width: 100% !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #eventBoxFilter {
+    width: 100% !important;
+  }
+}
+
+.btn {
+  background-color: rgb(83, 114, 240);
+  border: 1px solid rgb(83, 114, 240);
 }
